--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -9,25 +9,54 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
+
+
+    <div class="fixed-top">
+        <h1> ZoMoMo </h1>
+        <h2> Get out & Get lost </h2>
     </div>
+
+    <div id="nav-west">
+        <ul>
+            <li>
+                <b>Home</b>
+                <ul>
+                    <li><a href="/Site">Popular</a></li>
+                    <li><a href="/Site.master.cs">In The Area</a></li>
+                    <li><a href="/Site.master.cs">Date</a></li>
+                </ul>
+        </ul>
+        <ul>
+            <li>
+                <b>Profile</b>
+                <ul>
+                    <li><a href="#">Create Event</a></li>
+                    <li><a href="#">My Events</a></li>
+                    <li><a href="#">My Check Ins</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </li>
+            <li>
+                <b>Search</b>
+                <ul>
+                    <li><a href="#">Search Events</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tags <span class="caret"></span></a>
+                        <ul class="dropdown-menu" style="overflow:scroll">
+                            <li><a href="#">Food</a></li>
+                            <li><a href="#">Party</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+  
     <div class="container body-content">
         @RenderBody()
         @RenderSection("SPAViews", required: false)
