--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -16,58 +16,71 @@
         <h2> Get out & Get lost </h2>
     </div>
 
-    <div id="nav-west">
-        <ul>
-            <li>
-                <b>Home</b>
-                <ul>
-                    <li><a href="/Site">Popular</a></li>
-                    <li><a href="/Site.master.cs">In The Area</a></li>
-                    <li><a href="/Site.master.cs">Date</a></li>
-                </ul>
-        </ul>
-        <ul>
-            <li>
-                <b>Profile</b>
-                <ul>
-                    <li><a href="#">Create Event</a></li>
-                    <li><a href="#">My Events</a></li>
-                    <li><a href="#">My Check Ins</a></li>
-                    <li><a href="#">Settings</a></li>
-                </ul>
-            </li>
-            <li>
-                <b>Search</b>
-                <ul>
-                    <li><a href="#">Search Events</a></li>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">ZoMoMo</a>
+                </div>
+
+                <ul class="nav navbar-nav">
+
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tags <span class="caret"></span></a>
-                        <ul class="dropdown-menu" style="overflow:scroll">
-                            <li><a href="#">Food</a></li>
-                            <li><a href="#">Party</a></li>
-                            <li><a href="#">...</a></li>
-                            <li><a href="#">...</a></li>
-                            <li><a href="#">...</a></li>
-                            <li><a href="#">...</a></li>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Sort On
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/Site">Popular</a></li>
+                            <li><a href="/Site.master.cs">In The Area</a></li>
+                            <li><a href="/Site.master.cs">Date</a></li>
+
                         </ul>
                     </li>
+
+
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Profile
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/Site">My Profile</a></li>
+                            <li><a href="/Site.master.cs">My events</a></li>
+                            <li><a href="/Site.master.cs">My checkins</a></li>
+                            <li><a href="/Site.master.cs">Settings</a></li>
+
+
+                        </ul>
+
+                    </li>
+
                 </ul>
-            </li>
-        </ul>
-    </div>
 
-  
-    <div class="container body-content">
-        @RenderBody()
-        @RenderSection("SPAViews", required: false)
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+                <form class="navbar-form navbar-right">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </nav>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("Scripts", required: false)
+
+                <div class="container body-content">
+                    @RenderBody()
+                    @RenderSection("SPAViews", required: false)
+                    <hr />
+                    <footer>
+                        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                    </footer>
+                </div>
+
+                @Scripts.Render("~/bundles/jquery")
+                @Scripts.Render("~/bundles/bootstrap")
+                @RenderSection("Scripts", required: false)
 </body>
 </html>
