--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -11,63 +11,58 @@
 <body>
 
 
-    <div class="fixed-top">
-        <h1> ZoMoMo </h1>
-        <h2> Get out & Get lost </h2>
+
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">ZoMoMo</a>
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Profile <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">My profile</a></li>
+            <li><a href="#">My checkins</a></li>
+            <li><a href="#">My events</a></li>
+            <li><a href="#">Settings</a></li>
 
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">ZoMoMo</a>
+          </ul>
+        </li>
+          <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort On <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><a href="#">Popularity</a></li>
+                  <li><a href="#">Distance</a></li>
+                  <li><a href="#">Date</a></li>
+              </ul>
+          </li>
+      </ul>
+        <form class="nav navbar-form navbar-nav navbar-right">
+            <div class="input-group">
+                <input type="text" class="form-control navbar-right" placeholder="Search">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
                 </div>
-
-                <ul class="nav navbar-nav">
-
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Sort On
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/Site">Popular</a></li>
-                            <li><a href="/Site.master.cs">In The Area</a></li>
-                            <li><a href="/Site.master.cs">Date</a></li>
-
-                        </ul>
-                    </li>
-
-
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Profile
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/Site">My Profile</a></li>
-                            <li><a href="/Site.master.cs">My events</a></li>
-                            <li><a href="/Site.master.cs">My checkins</a></li>
-                            <li><a href="/Site.master.cs">Settings</a></li>
-
-
-                        </ul>
-
-                    </li>
-
-                </ul>
-
-                <form class="navbar-form navbar-right">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
             </div>
-        </nav>
+        </form>      
+      <ul class="nav navbar-nav navbar-right">
+
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
                 <div class="container body-content">
