--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -36,17 +36,71 @@
 
           </ul>
         </li>
-          <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort On <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                  <li><a href="#">Popularity</a></li>
-                  <li><a href="#">Distance</a></li>
-                  <li><a href="#">Date</a></li>
-              </ul>
-          </li>
-      </ul>
+          </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+                <ul id="login-dp" class="dropdown-menu">
+                    <li>
+                        <div class="row">
+                            <div class="col-md-12">
+                                Login via
+                                <div class="social-buttons">
+                                    <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+                                    <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+                                </div>
+                                or
+                                <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                                    <div class="form-group">
+                                        <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="sr-only" for="exampleInputPassword2">Password</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                        <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"> keep me logged-in
+                                        </label>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="bottom text-center">
+                                New here ? <a href="#"><b>Join Us</b></a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort On <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Popularity</a></li>
+                    <li><a href="#">Distance</a></li>
+                    <li><a href="#">Date</a></li>
+                </ul>
+            </li>
+        </ul>
         <form class="nav navbar-form navbar-nav navbar-right">
+            <select name="Sort By" id="" class="form-control" style="width: 150px;">
+                <option value="1">Popularity</option>
+                <option value="2">Date</option>
+            </select>
+            <select name="Max Distance" id="" class="form-control" style="width: 100px;">
+                    <option>5KM</option>
+                    <option>10KM</option>
+                    <option>15KM</option>
+                    <option>20KM</option>
+            </select>
             <div class="input-group">
+                
                 <input type="text" class="form-control navbar-right" placeholder="Search">
                 <div class="input-group-btn">
                     <button class="btn btn-default" type="submit">
@@ -55,12 +109,8 @@
                 </div>
             </div>
         </form>      
-      <ul class="nav navbar-nav navbar-right">
-
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
+   
+</div>
   </div>
 </nav>
 
