--- a/WebApplication1/WebApplication1/Views/Event/SearchEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/SearchEvent.cshtml
@@ -30,7 +30,7 @@
                 @Html.DisplayNameFor(model => model.EventLocation)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EventPicture)
+                @Html.DisplayNameFor(model => model.Image)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EventPrice)
