--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -18,7 +18,7 @@
 {
                 <div class="row">
                     <div class="col-4-4">
-                        @Html.DisplayFor(model => item.EventPicture)
+                        @Html.DisplayFor(model => item.Image)
                     </div>
                     <div class="col-lg-4">
                         @Html.DisplayFor(model => item.EventName)
