--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -17,9 +17,9 @@
 @foreach (var item in Model.events)
 {
                 <div class="row">
-                    <div class="col-4-4">
-                        @Html.DisplayFor(model => item.Image)
-                    </div>
+                  @*  <div class="col-4-4">
+                    @Html.DisplayFor(model => item.Image)
+                    </div>*@ 
                     <div class="col-lg-4">
                         @Html.DisplayFor(model => item.EventName)
                     </div>
