--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -44,7 +44,8 @@
           </ul>
         </li>
           </ul>
-@* 
+        @Html.Partial("_LoginPartial")
+@*
     @if (Request.IsAuthenticated)
 
     {
@@ -110,12 +111,12 @@
                                             </div>
 
                                         </div>
-                                    }*@
+                                    }
                                 </li>
                             </ul>
                         </li>
                     </ul>
-                    }
+                    }*@
 
                     <ul class="nav navbar-nav">
                         <li class="dropdown">
