--- a/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
@@ -13,59 +13,39 @@
 </head>
 <body>
     <div>
-        <h4>account</h4>
+        <h2>My Profile</h2>
         <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.username)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.username)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.passwordKey)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.passwordKey)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.firstname)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.firstname)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.lastname)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.lastname)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.mail)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.mail)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.birthday)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.birthday)
-            </dd>
-    
-        </dl>
-    </div>
+        <div class="container">
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <center>
+                                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRbezqZpEuwGSvitKy3wrwnth5kysKdRqBW54cAszm_wiutku3R" name="aboutme" width="140" height="140" border="0" class="img-circle"></a>
+                                <h3 class="media-heading">@Html.DisplayFor(model => model.username)</h3>
+                                <p class="text-left">
+                                    <strong>Description: </strong><br>
+                                    I'm a porn director
+                                </p>
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-primary active">
+                                        <input type="button" class="btn btn-primary" value="Past Events" autocomplete="off">
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="button" class="btn btn-primary" value="Future Events" autocomplete="off">
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="button" class="btn btn-primary" value="Host Events" autocomplete="off">
+                                    </label>
+                                </div>
+                                <br>
+                            </center>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     <p>
 
     </p>
