--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model WebApplication1.Models.Event
+﻿@model WebApplication1.Models.Event
 
 @{
     Layout = null;
@@ -67,11 +65,13 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.EventPicture, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.EventPicture, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.EventPicture, "", new { @class = "text-danger" })
-                </div>
+                @using (Html.BeginForm("FileUpload", "Home", FormMethod.Post,
+                            new { enctype = "multipart/form-data" }))
+                {
+                    <label for="file">Upload Image:</label>
+                    <input type="file" name="file" id="file" style="width: 100%;" />
+                    <input type="submit" value="Upload" class="submit" />
+                }
             </div>
     
             <div class="form-group">
