--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -65,12 +65,10 @@
             </div>
     
             <div class="form-group">
-                @using (Html.BeginForm("FileUpload", "Home", FormMethod.Post,
-                            new { enctype = "multipart/form-data" }))
+                @using (Html.BeginForm("UploadServer", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
                 {
-                    <label for="file">Upload Image:</label>
-                    <input type="file" name="file" id="file" style="width: 100%;" />
-                    <input type="submit" value="Upload" class="submit" />
+                    <input id="fileupload" type="file" name="files" multiple accept="image/gif, image/jpeg, image/png">
+                    <input type="submit" value="Upload">
                 }
             </div>
     
