--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -16,8 +16,8 @@
     @Scripts.Render("~/bundles/jqueryval")
     
     
-    @using (Html.BeginForm()) 
-    {
+@using (Html.BeginForm("CreateAndUpload", "Event", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
@@ -64,14 +64,16 @@
                 </div>
             </div>
     
-            <div class="form-group">
-                @using (Html.BeginForm("UploadServer", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            
+                @using (Html.BeginForm("CreateAndUpload", "Event", FormMethod.Post, new SortedDictionary<string, object>() { { "callback", Model.EventPicture } } ))
                 {
-                    <input id="fileupload" type="file" name="files" multiple accept="image/gif, image/jpeg, image/png">
-                    <input type="submit" value="Upload">
+                    <div class="form-group">
+                        <input id="fileupload" type="file" name="files" multiple accept="image/gif, image/jpeg, image/png">
+                        <input type="submit" value="Upload">
+                    </div>
                 }
-            </div>
-    
+                    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.EventPrice, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
