--- a/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,19 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: new { area = "" }, htmlAttributes: new { title = "Manage" })
+        <li class="dropdown">
+            <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" style="margin-top:8px">
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: new { area = "" }, htmlAttributes: new { title = "Manage" })
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">My profile</a></li>
+                <li><a href="#">My checkins</a></li>
+                <li><a href="#">My events</a></li>
+                <li><a href="#">Settings</a></li>
+            </ul>
         </li>
-        <li><a href="javascript:sessionStorage.removeItem('accessToken');$('#logoutForm').submit();">Log off</a></li>
+       <li><a href="javascript:sessionStorage.removeItem('accessToken');$('#logoutForm').submit();">Log off</a></li>
     </ul>
     }
 }
