--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
 
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <div class="container-fluid" style="background-color:grey">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -24,19 +24,6 @@
       <a class="navbar-brand" href="#">ZoMoMo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Profile <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">My profile</a></li>
-            <li><a href="#">My checkins</a></li>
-            <li><a href="#">My events</a></li>
-            <li><a href="#">Settings</a></li>
-
-          </ul>
-        </li>
-          </ul>
         @Html.Partial("_LoginPartial")
 @*
     @if (Request.IsAuthenticated)
@@ -112,16 +99,17 @@
                     }*@
 
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sort On <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Popularity</a></li>
-                                <li><a href="#">Distance</a></li>
-                                <li><a href="#">Date</a></li>
-                            </ul>
-                        </li>
+                        
                     </ul>
                     <form class="nav navbar-form navbar-nav navbar-right">
+                        <div class="input-group">
+                            <input type="text" class="form-control navbar-right" placeholder="Search" style="width:400px;">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </div>
                         <select name="Sort By" id="" class="form-control" style="width: 150px;">
                             <option value="1">Popularity</option>
                             <option value="2">Date</option>
@@ -132,15 +120,7 @@
                             <option>15KM</option>
                             <option>20KM</option>
                         </select>
-                        <div class="input-group">
-
-                            <input type="text" class="form-control navbar-right" placeholder="Search">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </div>
-                        </div>
+                        
                     </form>
 
 </div>
