--- a/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Profile.cshtml
@@ -12,9 +12,10 @@
     <title>Profile</title>
 </head>
 <body>
+    <div>
         <h2>My Profile</h2>
         <hr />
-        <div class="container" style="background-color:grey">
+        <div class="container">
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -27,30 +28,15 @@
                                     <strong>Description: </strong><br>
                                     I'm a porn director
                                 </p>
-                                <div class="btn-group" id="recent events" data-toggle="buttons">
-                                    <span>
-                                        <input type="button" value="tag1" style="background-color:lawngreen;
-                                                               border-radius:2%;" />
-                                    </span>
-                                    <span>
-                                        <input type="button" value="tag2" style="background-color:orangered;
-                                                               border-radius:2%;" />
-                                    </span>
-                                    <span>
-                                        <input type="button" value="tag3" style="background-color:yellow;
-                                                               border-radius:2%;" />
-                                    </span>
-                                </div>
-                                <p></p>
                                 <div class="btn-group" data-toggle="buttons">
-                                    <label class="btn btn-default">
-                                        <input type="button" value="Past Events" data-style="btn-primary" autocomplete="off">
+                                    <label class="btn btn-primary active">
+                                        <input type="button" class="btn btn-primary" value="Past Events" autocomplete="off">
                                     </label>
-                                    <label class="btn btn-default">
-                                        <input type="button" value="Future Events" data-style="btn-primary" autocomplete="off">
+                                    <label class="btn btn-primary">
+                                        <input type="button" class="btn btn-primary" value="Future Events" autocomplete="off">
                                     </label>
-                                    <label class="btn btn-default">
-                                        <input type="button" value="Host Events" data-style="btn-primary" autocomplete="off">
+                                    <label class="btn btn-primary">
+                                        <input type="button" class="btn btn-primary" value="Host Events" autocomplete="off">
                                     </label>
                                 </div>
                                 <br>
@@ -59,7 +45,7 @@
                     </div>
                 </div>
             </div>
-        </div>        
+        </div>
     <p>
 
     </p>
