--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create Event";
 }
 
-@using (Html.BeginForm("FileUpload", "CreateEvent", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("FileUpload", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     
 
@@ -12,44 +12,43 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.EventName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(m => m.ev.EventName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.EventName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EventName, "", new { @class = "text-danger" })
+            @Html.EditorFor(m => m.ev.EventName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(m => m.ev.EventName, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.EventDiscription, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(m => m.ev.EventDescription, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.EventDiscription, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EventDiscription, "", new { @class = "text-danger" })
+            @Html.EditorFor(m => m.ev.EventDescription, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(m => m.ev.EventDescription, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.EventDate, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(m => m.ev.EventDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
+            @Html.EditorFor(m => m.ev.EventDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(m => m.ev.EventDate, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.EventLocation, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ev.EventLocation, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.EditorFor(m => m.EventLocation, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.EventLocation, "", new { })
+            @Html.EditorFor(m => m.ev.EventLocation, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(m => m.ev.EventLocation, "", new { })
         </div>
     </div>
-    <div class="form-group">
-        <input type="file" name="model.ImageUpload" id="ImageUpload" />
-    </div>
+        <input type="file" name="ImageUpload" id="ImageUpload" />
+    
 
     <div class="form-group">
-        @Html.LabelFor(model => model.EventPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(m => m.ev.EventPrice, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.EventPrice, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EventPrice, "", new { @class = "text-danger" })
+            @Html.EditorFor(m => m.ev.EventPrice, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(m => m.ev.EventPrice, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
