--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -65,7 +65,7 @@
 <script type="text/javascript">
 
         google.maps.event.addDomListener(window, 'load', function () {
-            var input = document.getElementById('EventLocation');
+            var input = document.getElementById('ev.EventLocation');
             var places = new google.maps.places.Autocomplete(input);
         });
 </script>
