--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
                     @RenderSection("SPAViews", required: false)
                     <hr />
                     <footer>
-                        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                        <p>&copy; @DateTime.Now.Year - ©Copyright ZoMoMo</p>
                     </footer>
                 </div>
 
