--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
 </nav>
 
 
-                <div class="container body-content" style="background-color:lightblue">
+                <div class="container body-content" style="background-color:#e8edf3">
                     @RenderBody()
                     @RenderSection("SPAViews", required: false)
                     <hr />
