--- a/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/_Home.cshtml
@@ -7,9 +7,6 @@
 <!DOCTYPE html>
 
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -17,16 +14,16 @@
 </head>
 <body>
     <div>
-        <h4>Events</h4>
+        <h4 style="margin-top:100px;">Events</h4>
         <hr />
 
-        <div class="container" style="margin-top:50px;">
+        <div class="container" style="padding-right:50px;">
 
             <div class="row">
                 @foreach (var item in Model.events)
             {
 
-                    <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="col-sm-4 col-lg-4 col-md-4" style="height:350px">
                         <div class="thumbnail">
                             @Model.cloudinary.Api.UrlImgUp.Transform(
                                         new Transformation()
@@ -39,6 +36,7 @@
                                     <a href="#">@Html.DisplayFor(ModelItem => item.EventName)</a>
                                 </h4>
                                 <p>@Html.DisplayFor(ModelItem => item.EventDescription)</p>
+                                <time>@Html.DisplayFor(ModelItem => item.EventDate)</time>
                             </div>
                             <div class="interactio">
                                 <p class="pull-right">Participants: @Html.DisplayFor(ModelItem => item.EventId)</p>
@@ -54,6 +52,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
