--- a/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
+++ b/WebApplication1/WebApplication1/Views/Event/CreateEvent.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.ev.EventDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(m => m.EventDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(m => m.EventDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.EventDescription, "", new { @class = "text-danger" })
@@ -79,13 +79,23 @@
             </div>
         </div>
     </div>
+
+    <div>
+        @Html.ActionLink("Back to Homepage", "Index")
+    </div>
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk&libraries=places"></script>
     <script type="text/javascript">
+        var input = document.getElementById('Location');
+
+        google.maps.event.addDomListener(input, 'keydown', function (e) {
+            if (e.keyCode == 13) {
+                e.preventDefault();
+            }
+        });
         google.maps.event.addDomListener(window, 'load', function () {
-            var input = document.getElementById('Location');
             var places = new google.maps.places.Autocomplete(input);
         });
     </script>
