--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,144 +1,150 @@
 ﻿@using WebApplication1.Models
 @using Microsoft.AspNet.Identity
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - ZoMoMo</title>
+    <title>ZoMoMo - Home </title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar primary-color">
+        <div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">ZoMoMo</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    @Html.Partial("_LoginPartial")
+                    @*
+                        @if (Request.IsAuthenticated)
 
-<nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar primary-color">
-    <div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
-        <div class="container-fluid" >
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">ZoMoMo</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                @Html.Partial("_LoginPartial")
-                @*
-                    @if (Request.IsAuthenticated)
-
-                    {
-                        using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
                         {
-                            @Html.AntiForgeryToken()
+                            using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                            {
+                                @Html.AntiForgeryToken()
 
-                            <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">@Html.Raw("Hello " + User.Identity.GetUserName())  <span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li>@Html.ActionLink("My profile", "Profile")</li>
-                                        <li>@Html.ActionLink("My checkins", "#")</li>
-                                        <li>@Html.ActionLink("My Events", "#")</li>
-                                        <li>@Html.ActionLink("Settings", "#")</li>
-                                    </ul>
-                                    </li>
-                                </ul>
-
-                                    }
-                                    }
-                                    else
-                                    {
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-                                            <ul id="login-dp" class="dropdown-menu">
-                                                <li>
-                                                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                                    {
-                                                        <div class="row">
-                                                            <div class="col-md-12">
-                                                                <section id="loginForm">
-
-                                                                    @Html.AntiForgeryToken()
-                                                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                                                    <div class="social-buttons">
-                                                                        <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-                                                                        <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-                                                                    </div>
-                                                                    <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                                                                        <div class="form-group">
-                                                                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                                                                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                                                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                                                                        </div>
-                                                                        <div class="form-group">
-                                                                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                                                                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                                                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                                                            <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-                                                                        </div>
-                                                                        <div class="form-group">
-                                                                            <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-                                                                        </div>
-                                                                        @Html.CheckBoxFor(m => m.RememberMe)
-                                                                        @Html.LabelFor(m => m.RememberMe)
-                                                                    </form>
-                                                                </section>
-                                                            </div>
-                                                            <div class="bottom text-center">
-                                                                New here ? @Html.ActionLink("Register as a new user", "Register")
-                                                            </div>
-
-                                                        </div>
-                                                    }
-                                                </li>
-                                            </ul>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li class="dropdown">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">@Html.Raw("Hello " + User.Identity.GetUserName())  <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li>@Html.ActionLink("My profile", "Profile")</li>
+                                            <li>@Html.ActionLink("My checkins", "#")</li>
+                                            <li>@Html.ActionLink("My Events", "#")</li>
+                                            <li>@Html.ActionLink("Settings", "#")</li>
+                                        </ul>
                                         </li>
                                     </ul>
-                                    }*@
 
-                <ul class="nav navbar-nav"></ul>
-                <form class="nav navbar-form navbar-nav navbar-right">
-                    <div class="input-group">
-                        <input type="text" class="form-control navbar-right" placeholder="Search" style="width:400px;">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
+                                        }
+                                        }
+                                        else
+                                        {
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li class="dropdown">
+                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+                                                <ul id="login-dp" class="dropdown-menu">
+                                                    <li>
+                                                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                                        {
+                                                            <div class="row">
+                                                                <div class="col-md-12">
+                                                                    <section id="loginForm">
+
+                                                                        @Html.AntiForgeryToken()
+                                                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                                                        <div class="social-buttons">
+                                                                            <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+                                                                            <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+                                                                        </div>
+                                                                        <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                                                                            <div class="form-group">
+                                                                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                                                                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                                                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                                                            </div>
+                                                                            <div class="form-group">
+                                                                                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                                                                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                                                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                                                                <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                                                                            </div>
+                                                                            <div class="form-group">
+                                                                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                                                                            </div>
+                                                                            @Html.CheckBoxFor(m => m.RememberMe)
+                                                                            @Html.LabelFor(m => m.RememberMe)
+                                                                        </form>
+                                                                    </section>
+                                                                </div>
+                                                                <div class="bottom text-center">
+                                                                    New here ? @Html.ActionLink("Register as a new user", "Register")
+                                                                </div>
+
+                                                            </div>
+                                                        }
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                        }*@
+                    <ul class="nav navbar-nav"></ul>
+                    <form class="nav navbar-form navbar-nav navbar-right">
+                        <div class="input-group">
+                            <span><input type="text" class="form-control navbar-nav" placeholder="Search events or tags" style="width:400px;"></span>
+                            <span><input type="text" class="form-control navbar-nav" placeholder="Enter a city" id="City" /></span>
+                            <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp5LTsTDiXo_TJtup2jYHnnZmlTF9Btxk&libraries=places"></script>
+                            <script type="text/javascript">
+                                var input = document.getElementById('City');
+
+                                google.maps.event.addDomListener(input, 'keydown', function (e) {
+                                    if (e.keyCode == 13) {
+                                        e.preventDefault();
+                                    }
+                                });
+                                google.maps.event.addDomListener(window, 'load', function () {
+                                    var options = {
+                                        types: ['(cities)']
+                                    };
+                                    var places = new google.maps.places.Autocomplete(input, options);
+                                });
+                            </script>
+                            <select id="date" data-xd-wired="select-box" style="height:34px">
+                                <option disabled selected>Enter date</option>
+                                <option value="today">Today</option>
+                                <option value="tomorrow">Tomorrow</option>
+                                <option value="this_week">This Week</option>
+                                <option value="this_weekend">This Weekend</option>
+                                <option value="next_week">Next Week</option>
+                                <option value="next_month">Next Month</option>
+                            </select>
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                    <select name="Sort By" id="" class="form-control" style="width: 150px;">
-                        <option value="1">Popularity</option>
-                        <option value="2">Date</option>
-                    </select>
-                    <select name="Max Distance" id="" class="form-control" style="width: 100px;">
-                        <option>5KM</option>
-                        <option>10KM</option>
-                        <option>15KM</option>
-                        <option>20KM</option>
-                    </select>
-
-                </form>
-
+                    </form>
+                </div>
             </div>
         </div>
-        </div>
-</nav>
+    </nav>
 
-
-                <div class="container body-content" style="background-color:#e8edf3">
-                    @RenderBody()
-                    @RenderSection("SPAViews", required: false)
-                    <hr />
-                    <footer>
-                        <p>&copy; @DateTime.Now.Year - ©Copyright ZoMoMo</p>
-                    </footer>
-                </div>
-
-                @Scripts.Render("~/bundles/jquery")
-                @Scripts.Render("~/bundles/bootstrap")
-                @RenderSection("Scripts", required: false)
+    <div class="container body-content" style="background-color:#e8edf3">
+        @RenderBody()
+        @RenderSection("SPAViews", required: false)
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - ©Copyright ZoMoMo</p>
+        </footer>
+    </div>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
